# Palladium

./: args.gn
patches/: 0017-disable-Media-Integrity-blink-extension-API-on-webvi.patch  0033-disable-offering-translations-by-default.patch  0039-disable-search-provider-logo.patch  0047-Disable-top-toolbar-button-Translate-option-by-defau.patch  0059-Disable-tab-group-sync-settings-UI-by-default.patch  0082-remove-Google-prefix-from-storage-settings-label.patch  0085-bugfix-add-missing-null-check-for-updating-preferenc.patch  0090-Utility-class-for-modifying-preferences-at-Privacy-s.patch  0093-Make-PrivacySettings-preference-keys-declaration-pac.patch  0095-remove-safety-check-menu.patch  0096-remove-unwanted-account-and-services-section.patch  0105-Handle-more-web-search-intents-in-browser.patch  0108-Apply-toggle-for-opening-links-in-incognito-for-sear.patch  0109-Apply-toggle-for-opening-links-in-incognito-for-shar.patch  0110-Implement-UI-for-JIT-site-settings.patch  0112-make-cross-origin-referrer-behavior-configurable.patch  0113-Derive-high-entropy-client-hints-with-reduced-user-a.patch  0120-Include-a-java-port-of-atomic-file-and-scoped-file-d.patch  0163-add-support-for-other-language-content-filtering-dep.patch  0166-Isolate-sandboxed-iframes-per-site-by-default.patch  0170-Disable-predictive-back-gesture-for-Vanadium.patch  0176-revert-upstream-Revert-clearing-javascript-JIT-site-.patch  0185-Reset-saved-javascript-optimizer-site-setting.patch  0187-Support-for-excluding-crashpad-in-compiling-chrome-t.patch  (+5 more)
