# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.
target_os = "android"
target_cpu = "arm64"  # See "Figuring out target_cpu" below
use_remoteexec = false  # Enables distributed builds. See "Faster Builds".
android_static_analysis = "off"  # Does static checks in background. See "Faster Builds".
is_debug = false
is_chrome_branded = false
is_official_build = true
enable_discovery = false
enable_platform_ac3_eac3_audio = true
enable_platform_hevc = true
enable_mse_mpeg2ts_stream_parser = true
ffmpeg_branding = "Chrome"
proprietary_codecs = true
rtc_use_h264 = true
rtc_use_h265=true
enable_hevc_parser_and_hw_decoder = true
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_iamf_audio = true
enable_platform_mpeg_h_audio = true
google_api_key = "no"
google_default_client_id = "no"
google_default_client_secret = "no"
use_official_google_api_keys = false
enable_resource_allowlist_generation = false
enable_platform_mpeg_h_audio = true
rtc_build_examples = false
cc_wrapper = "sccache"
angle_use_vulkan_display = true
use_siso = true

# Packagename Branding
#chrome_public_manifest_package = "org.nekofoss.palladium"

enable_vr = false
enable_arcore = false
enable_openxr = false
enable_cardboard = false
enable_remoting = false
enable_reporting = false

v8_enable_drumbrake = true
v8_drumbrake_bounds_checks = true

